--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       html {
         scroll-behavior: smooth;
         scroll-padding-top: 100px; /* Offset for fixed navbar */
+        font-size: 90%; /* Scale down site to simulate 90% zoom for better display */
       }
       body {
         font-family: 'Inter', sans-serif;
