--- a/index.html
+++ b/index.html
@@ -4,6 +4,27 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Expert en électricité CFO/CFA, énergie solaire, bornes IRVE et réseaux au Maroc. Solutions durables et maintenance pour pros et particuliers à Casablanca." />
+    <meta name="keywords" content="électricité, CFO, CFA, énergie solaire, panneaux photovoltaïques, bornes de recharge, IRVE, réseaux informatiques, maintenance électrique, Casablanca, Maroc, Multiresaux SARL" />
+    <meta name="author" content="MULTIRESAUX SARL" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://multireseaux.ma/" />
+    <meta property="og:title" content="MULTIRESAUX SARL - Expertise Électrique & Informatique au Maroc" />
+    <meta property="og:description" content="Expert en électricité CFO/CFA, énergie solaire, bornes IRVE et réseaux au Maroc. Solutions durables et maintenance pour pros et particuliers à Casablanca." />
+    <meta property="og:image" content="/images/logos/logo.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://multireseaux.ma/" />
+    <meta property="twitter:title" content="MULTIRESAUX SARL - Expertise Électrique & Informatique au Maroc" />
+    <meta property="twitter:description" content="Expert en électricité CFO/CFA, énergie solaire, bornes IRVE et réseaux au Maroc. Solutions durables et maintenance pour pros et particuliers à Casablanca." />
+    <meta property="twitter:image" content="/images/logos/logo.png" />
+
     <title>MULTIRESAUX SARL - Expertise Électrique & Informatique</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
