--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta property="twitter:description" content="Expert en électricité CFO/CFA, énergie solaire, bornes IRVE et réseaux au Maroc. Solutions durables et maintenance pour pros et particuliers à Casablanca." />
     <meta property="twitter:image" content="/images/logos/logo.png" />
 
-    <title>MULTIRESAUX SARL - Expertise Électrique & Informatique</title>
+    <title>MULTIRESAUX SARL - Expertise Électrique</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
